SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 01/10/2007, version 1.09: roms
	- the old file selector has been deprecated starting at GTK 2.12
	
- 17/09/2007, version 1.08 (1.1.0, 1.0.8, 1.0.8, 1.0.5): roms
	- screenshots can be copied into the clipboard
	- use fixed fonts for release and manpage dboxes
	- slightly reworked options in popup menus
	- don't overwrite variable as default behavior for action box
	- refresh progress bar (bug)
	- check for AMS/OS version for clock support

- 13/09/2007, version 1.07b (1.1.0, 1.0.7, 1.0.7, 1.0.4): roms
	- fixed ticables2 library due to bad check of dhahelper

- 03/09/2007, version 1.07a (1.0.9, 1.0.7, 1.0.7, 1.0.4): roms
	- re-released due to missing file in Windows Installer (dhahelper.sys)
	- includes latest ticables2 library for TiEmu (USB support)
	
- 26/08/2007, version 1.07 (1.0.8, 1.0.7, 1.0.7, 1.0.4): roms
	- updated various documentation about the use of new USB drivers

- 19/06/2007, version 1.06 (1.0.6, 1.0.7, 1.0.7, 1.0.4): roms
	- followed API changes in ticalcs2 library
	- fixed potential bug in action box (var existence checking)
	- fixed this bug (in ticonv):
	sending LCHASE.8xp from 20sec.zip package failed on 
	TI84+ USB due to un-detokenization of varname (because tifiles2 don't 
	know whether file is targetted for TI84+ or TI84+ USB).
	Sending is OK, receiving is still KO because we should pass vartype 
	with named lists.
	- removed grouping/ungrouping of files from popup menu. Replaced it by
		an access to GFM.
	- fixed KDE path detection for multilib systems with both 32-bit and
	  64-bit libraries installed (kevin)
	- made zlib non-optional now that libtifiles2 requires it anyway (kevin)
	- close link cable before probing and open it after otherwise current
	link cable can't be probed (serial & parallel)

- 10/06/2007, version 1.05 (1.0.5, 1.0.6, 1.0.6, 1.0.3): roms
	- sending of APPV variables in FLASH is not allowed; avoid this.