@@ -48,19 +48,19 @@ AC_CHECK_TOOL(RC, windres, windres)
 # Checks for libraries.
 AM_GNU_GETTEXT
 
-PKG_CHECK_MODULES(TICABLES, ticables2 >= 1.0.6)
+PKG_CHECK_MODULES(TICABLES, ticables2 >= 1.1.1)
 AC_SUBST(TICABLES_CFLAGS)
 AC_SUBST(TICABLES_LIBS)
 
-PKG_CHECK_MODULES(TICALCS, ticalcs2 >= 1.0.7)
+PKG_CHECK_MODULES(TICALCS, ticalcs2 >= 1.0.9)
 AC_SUBST(TICALCS_CFLAGS)
 AC_SUBST(TICALCS_LIBS)
 
-PKG_CHECK_MODULES(TIFILES, tifiles2 >= 1.0.7)
+PKG_CHECK_MODULES(TIFILES, tifiles2 >= 1.0.9)
 AC_SUBST(TIFILES_CFLAGS)
 AC_SUBST(TIFILES_LIBS)
 
-PKG_CHECK_MODULES(TICONV, ticonv >= 1.0.4)
+PKG_CHECK_MODULES(TICONV, ticonv >= 1.0.6)
 AC_SUBST(TICONV_CFLAGS)
 AC_SUBST(TICONV_LIBS)
 
