@@ -464,6 +464,14 @@
 			      <property name="use_underline">True</property>
 			    </widget>
 			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="nspire1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">NSpire</property>
+			      <property name="use_underline">True</property>
+			    </widget>
+			  </child>
 			</widget>
 		      </child>
 		    </widget>
