@@ -28,14 +28,14 @@
 */
 
 #ifdef __WIN32__
-# define TILP_VERSION "1.08"		// For Win32
+# define TILP_VERSION "1.09"		// For Win32
 #else
 # define TILP_VERSION VERSION
 #endif
 
-#define TILP_REQUIRES_LIBCABLES_VERSION	"1.0.6"
-#define TILP_REQUIRES_LIBCALCS_VERSION 	"1.0.7"
-#define TILP_REQUIRES_LIBFILES_VERSION	"1.0.7"
-#define TILP_REQUIRES_LIBCONV_VERSION	"1.0.4"
+#define TILP_REQUIRES_LIBCABLES_VERSION	"1.1.1"
+#define TILP_REQUIRES_LIBCALCS_VERSION 	"1.0.9"
+#define TILP_REQUIRES_LIBFILES_VERSION	"1.0.9"
+#define TILP_REQUIRES_LIBCONV_VERSION	"1.0.6"
 
 #endif
