@@ -2,8 +2,9 @@ SubVersion: $Id$
 
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
-- 01/10/2007, version 1.09: roms
+- 01/10/2007, version 1.09: (1.1.1, 1.0.9, 1.0.9, 1.0.5): roms
 	- the old file selector has been deprecated starting at GTK 2.12
+	- adding NSpire support
 	
 - 17/09/2007, version 1.08 (1.1.0, 1.0.8, 1.0.8, 1.0.5): roms
 	- screenshots can be copied into the clipboard
